Changed how to get default value POD_NAME property in middleware module.